# gens-x

GensForLinux/: .cdtproject  .cvsignore  .project  AUTHORS  BUGS  GENS-DEVS-README-FIRST.txt  Makefile.am  Makefile.in  README  aclocal.m4  build.sh  config.h.in  configure  configure.ac  configure.in  gens.txt  history.txt  mkinstalldirs
GensForLinux/autom4te.cache/: output.0  requests  traces.0
GensForLinux/pixmaps/: Makefile.am  Makefile.in  Thumbs.db  bfoldc.xpm
GensForLinux/src/: Makefile.am  Makefile.in
GensForLinux/src/gens/: .cvsignore  Makefile.am  Makefile.in
GensForLinux/src/gens/debug/: debug.c  debug.h  m68kd.c  m68kd.h  sh2d.c  sh2d.h  z80dis.c  z80dis.h
GensForLinux/src/gens/emulator/: g_main.c  g_main.h  gens.c  gens.h  parse.c  parse.h  ui_proxy.c  ui_proxy.h
GensForLinux/src/gens/gens_core/: nasmhead.inc
GensForLinux/src/gens/gens_core/gfx/: blit.h  blit2.c  gfx_cd.h  (+2 more)
GensForLinux/src/gens/gtkui/: support.c  support.h
GensForLinux/src/gens/mp3_dec/: common.c  dct64_i386.c  decode_i386.c  interface.c  layer3.c  mpg123.h
GensForLinux/src/gens/netplay/: ccnet.c  ccnet.h  net.c
GensForLinux/src/gens/port/: port.c  port.h  timer.c  timer.h
GensForLinux/src/gens/sdllayer/: g_sdldraw.c  g_sdldraw.h  g_sdlinput.c  g_sdlinput.h  g_sdlsound.c  g_sdlsound.h
GensForLinux/src/gens/segacd/: cd_aspi.c  cd_aspi.h  cd_file.c  cd_file.h  cd_sys.c  cd_sys.h  cdda_mp3.c  cdda_mp3.h  lc89510.c  lc89510.h
GensForLinux/src/gens/util/: ggenie.c  ggenie.h  gym.c  gym.h  rom.c  rom.h  save.c  save.h  scrshot.c  scrshot.h  unzip.c  wave.c  wave.h
GensForLinux/src/starscream/: Makefile.am  Makefile.in
GensForLinux/src/starscream/main68k/: .cvsignore  Makefile.am  Makefile.in  STARCPU.H  STARDOC.TXT  star.c
GensForLinux/src/starscream/sub68k/: .cvsignore  Makefile.am  Makefile.in  STARDOC.TXT  star.c
(+176 files in other folders)
